--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "firebase": "^10.7.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
-    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.5.5",
     "react-router-dom": "^6.21.1",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.11"
